--- a/recruit.html
+++ b/recruit.html
@@ -15,24 +15,24 @@
           <img src="img/logo.png">
         </div>
         <div class="menu-item">
-          <div class="menu-item-list"><a href="#">ホーム</a></div>
-          <div class="menu-item-list"><a href="#">事業内容</a></div>
-          <div class="menu-item-list"><a href="#">ニュース</a></div>
-          <div class="menu-item-list"><a href="#">社員ブログ</a></div>
-          <div class="menu-item-list"><a href="#">会社概要</a></div>
-          <div class="menu-item-list"><a href="#">採用情報</a></div>
-          <div class="menu-item-list"><a href="#">お問い合わせ</a></div>
+          <div class="menu-item-list"><a href="index.html">ホーム</a></div>
+          <div class="menu-item-list"><a href="service.html">事業内容</a></div>
+          <div class="menu-item-list"><a href="news.html">ニュース</a></div>
+          <div class="menu-item-list"><a href="blog.html">社員ブログ</a></div>
+          <div class="menu-item-list"><a href="company.html">会社概要</a></div>
+          <div class="menu-item-list"><a href="recruit.html">採用情報</a></div>
+          <div class="menu-item-list"><a href="contact.html">お問い合わせ</a></div>
         </div>
       
       <nav class="nav" id="nav">
         <ul>
-          <li><a href="#">ホーム</a></li>
-          <li><a href="#">事業内容</a></li>
-          <li><a href="#">ニュース</a></li>
-          <li><a href="#">社員ブログ</a></li>
-          <li><a href="#">会社概要</a></li>
-          <li><a href="#">採用情報</a></li>
-          <li><a href="#">お問い合わせ</a></li>
+          <li><a href="index.html">ホーム</a></li>
+          <li><a href="service.html">事業内容</a></li>
+          <li><a href="news.html">ニュース</a></li>
+          <li><a href="blog.html">社員ブログ</a></li>
+          <li><a href="company.html">会社概要</a></li>
+          <li><a href="recruit.html">採用情報</a></li>
+          <li><a href="contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
       <div class="menu-icon" id="menu-icon">
@@ -118,34 +118,35 @@
     <section class="inquiry">
       <div class="inq-ttl">お問い合わせ</div>
       <div class="inq-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</div>
-      <div class="section-link">お問い合わせ</div>
+      <a href="contact.html"><div class="section-link">お問い合わせ</div>
+        </a>
     </section>
     </main>
     <footer>
     <small class="copyright">&copy;2020 TECH inc.</small>
     <div class="footer-menu">
       <ul>
-        <li class="footer-manu-item"><a href="#">ホーム</a></li>
-        <li class="footer-manu-item"><a href="#">事業内容</a></li>
-        <li class="footer-manu-item"><a href="#">ニュース</a></li>
-        <li class="footer-manu-item"><a href="#">社員ブログ</a></li>
-        <li class="footer-manu-item"><a href="#">会社概要</a></li>
+        <li class="footer-manu-item"><a href="index.html">ホーム</a></li>
+        <li class="footer-manu-item"><a href="service.html">事業内容</a></li>
+        <li class="footer-manu-item"><a href="news.html">ニュース</a></li>
+        <li class="footer-manu-item"><a href="blog.html">社員ブログ</a></li>
+        <li class="footer-manu-item"><a href="company.html">会社概要</a></li>
         <li class="footer-manu-item"><a href="#">採用情報</a></li>
-        <li class="footer-manu-item"><a href="#">お問い合わせ</a></li>
+        <li class="footer-manu-item"><a href="contact.html">お問い合わせ</a></li>
       </ul>
     </div>
     <div class="footer-responsive">
       <ul class="footer-responsive-menu">
-        <li class="footer-res-item"><a href="#">ホーム</a></li>
-        <li class="footer-res-item"><a href="#">事業内容</a></li>
-        <li class="footer-res-item"><a href="#">ニュース</a></li>
-        <li class="footer-res-item"><a href="#">社員ブログ</a></li>
-        <li class="footer-res-item"><a href="#">会社概要</a></li>
+        <li class="footer-res-item"><a href="index.html">ホーム</a></li>
+        <li class="footer-res-item"><a href="service.html">事業内容</a></li>
+        <li class="footer-res-item"><a href="news.html">ニュース</a></li>
+        <li class="footer-res-item"><a href="blog.html">社員ブログ</a></li>
+        <li class="footer-res-item"><a href="company.html">会社概要</a></li>
         <li class="footer-res-item"><a href="#">採用情報</a></li>
-        <li class="footer-res-item"><a href="#">お問い合わせ</a></li>
+        <li class="footer-res-item"><a href="contact.html">お問い合わせ</a></li>
       </ul>
     </div>
-  </footer>
+    </footer>
   <script src="js/main.js"></script>
 </body>
 </html>
