--- a/contact.html
+++ b/contact.html
@@ -15,24 +15,24 @@
           <img src="img/logo.png">
         </div>
         <div class="menu-item">
-          <div class="menu-item-list"><a href="#">ホーム</a></div>
-          <div class="menu-item-list"><a href="#">事業内容</a></div>
-          <div class="menu-item-list"><a href="#">ニュース</a></div>
-          <div class="menu-item-list"><a href="#">社員ブログ</a></div>
-          <div class="menu-item-list"><a href="#">会社概要</a></div>
-          <div class="menu-item-list"><a href="#">採用情報</a></div>
-          <div class="menu-item-list"><a href="#">お問い合わせ</a></div>
+          <div class="menu-item-list"><a href="index.html">ホーム</a></div>
+          <div class="menu-item-list"><a href="service.html">事業内容</a></div>
+          <div class="menu-item-list"><a href="news.html">ニュース</a></div>
+          <div class="menu-item-list"><a href="blog.html">社員ブログ</a></div>
+          <div class="menu-item-list"><a href="company.html">会社概要</a></div>
+          <div class="menu-item-list"><a href="recruit.html">採用情報</a></div>
+          <div class="menu-item-list"><a href="contact.html">お問い合わせ</a></div>
         </div>
       
       <nav class="nav" id="nav">
         <ul>
-          <li><a href="#">ホーム</a></li>
-          <li><a href="#">事業内容</a></li>
-          <li><a href="#">ニュース</a></li>
-          <li><a href="#">社員ブログ</a></li>
-          <li><a href="#">会社概要</a></li>
-          <li><a href="#">採用情報</a></li>
-          <li><a href="#">お問い合わせ</a></li>
+          <li><a href="index.html">ホーム</a></li>
+          <li><a href="service.html">事業内容</a></li>
+          <li><a href="news.html">ニュース</a></li>
+          <li><a href="blog.html">社員ブログ</a></li>
+          <li><a href="company.html">会社概要</a></li>
+          <li><a href="recruit.html">採用情報</a></li>
+          <li><a href="contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
       <div class="menu-icon" id="menu-icon">
@@ -52,7 +52,7 @@
     </section>
     <section class="contact">
       <div class="form-area">
-        <form class="contact-form" action="#" method="post">
+        <form class="contact-form" action="index.html" method="post">
           <div class="form-item">
             <label class="form-item-name">会社名</label><br>
             <input type="text" id="company-name">
@@ -84,24 +84,24 @@
         <small class="copyright">&copy;2020 TECH inc.</small>
         <div class="footer-menu">
           <ul>
-            <li class="footer-manu-item"><a href="#">ホーム</a></li>
-            <li class="footer-manu-item"><a href="#">事業内容</a></li>
-            <li class="footer-manu-item"><a href="#">ニュース</a></li>
-            <li class="footer-manu-item"><a href="#">社員ブログ</a></li>
-            <li class="footer-manu-item"><a href="#">会社概要</a></li>
-            <li class="footer-manu-item"><a href="#">採用情報</a></li>
-            <li class="footer-manu-item"><a href="#">お問い合わせ</a></li>
+            <li class="footer-manu-item"><a href="index.html">ホーム</a></li>
+            <li class="footer-manu-item"><a href="service.html">事業内容</a></li>
+            <li class="footer-manu-item"><a href="news.html">ニュース</a></li>
+            <li class="footer-manu-item"><a href="blog.html">社員ブログ</a></li>
+            <li class="footer-manu-item"><a href="company.html">会社概要</a></li>
+            <li class="footer-manu-item"><a href="recruit.html">採用情報</a></li>
+            <li class="footer-manu-item"><a href="contact.html">お問い合わせ</a></li>
           </ul>
         </div>
         <div class="footer-responsive">
           <ul class="footer-responsive-menu">
-            <li class="footer-res-item"><a href="#">ホーム</a></li>
-            <li class="footer-res-item"><a href="#">事業内容</a></li>
-            <li class="footer-res-item"><a href="#">ニュース</a></li>
-            <li class="footer-res-item"><a href="#">社員ブログ</a></li>
-            <li class="footer-res-item"><a href="#">会社概要</a></li>
-            <li class="footer-res-item"><a href="#">採用情報</a></li>
-            <li class="footer-res-item"><a href="#">お問い合わせ</a></li>
+            <li class="footer-res-item"><a href="index.html">ホーム</a></li>
+            <li class="footer-res-item"><a href="service.html">事業内容</a></li>
+            <li class="footer-res-item"><a href="news.html">ニュース</a></li>
+            <li class="footer-res-item"><a href="blog.html">社員ブログ</a></li>
+            <li class="footer-res-item"><a href="company.html">会社概要</a></li>
+            <li class="footer-res-item"><a href="recruit.html">採用情報</a></li>
+            <li class="footer-res-item"><a href="contact.html">お問い合わせ</a></li>
           </ul>
         </div>
       </footer>
