--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="img/logo.png">
         </div>
         <div class="menu-item">
-          <div class="menu-item-list"><a href="home.html">ホーム</a></div>
+          <div class="menu-item-list"><a href="index.html">ホーム</a></div>
           <div class="menu-item-list"><a href="service.html">事業内容</a></div>
           <div class="menu-item-list"><a href="news.html">ニュース</a></div>
           <div class="menu-item-list"><a href="blog.html">社員ブログ</a></div>
@@ -26,7 +26,7 @@
       
       <nav class="nav" id="nav">
         <ul>
-          <li><a href="home.html">ホーム</a></li>
+          <li><a href="index.html">ホーム</a></li>
           <li><a href="service.html">事業内容</a></li>
           <li><a href="news.html">ニュース</a></li>
           <li><a href="blog.html">社員ブログ</a></li>
@@ -158,13 +158,16 @@
         <div class="section-link">社員ブログ一覧を見る</div></a>
     </section>
     <section class="info">
-      <span class="box1"><a href="company.html"><div class="about"><p class="info-ttl1">会社概要</p></div></a></span>
-      <div class="recruit"><p class="info-ttl2">採用情報</p></div>
+      <div class="box1"><a href="company.html"><div class="about"><p class="info-ttl1">会社概要</p></div></a></div>
+      <div class="box2"><a href="recruit.html">
+      <div class="recruit"><p class="info-ttl2">採用情報</p></div></a>
+      </div>
     </section>
     <section class="inquiry">
       <div class="inq-ttl">お問い合わせ</div>
       <div class="inq-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</div>
-      <div class="section-link">お問い合わせ</div>
+      <a href="contact.html">
+      <div class="section-link">お問い合わせ</div></a>
     </section>
     </main>
     <footer>
@@ -172,23 +175,23 @@
     <div class="footer-menu">
       <ul>
         <li class="footer-manu-item"><a href="#">ホーム</a></li>
-        <li class="footer-manu-item"><a href="#">事業内容</a></li>
-        <li class="footer-manu-item"><a href="#">ニュース</a></li>
-        <li class="footer-manu-item"><a href="#">社員ブログ</a></li>
-        <li class="footer-manu-item"><a href="#">会社概要</a></li>
-        <li class="footer-manu-item"><a href="#">採用情報</a></li>
-        <li class="footer-manu-item"><a href="#">お問い合わせ</a></li>
+        <li class="footer-manu-item"><a href="service.html">事業内容</a></li>
+        <li class="footer-manu-item"><a href="news.html">ニュース</a></li>
+        <li class="footer-manu-item"><a href="blog.html">社員ブログ</a></li>
+        <li class="footer-manu-item"><a href="company.html">会社概要</a></li>
+        <li class="footer-manu-item"><a href="recruit.html">採用情報</a></li>
+        <li class="footer-manu-item"><a href="contact.html">お問い合わせ</a></li>
       </ul>
     </div>
     <div class="footer-responsive">
       <ul class="footer-responsive-menu">
         <li class="footer-res-item"><a href="#">ホーム</a></li>
-        <li class="footer-res-item"><a href="#">事業内容</a></li>
-        <li class="footer-res-item"><a href="#">ニュース</a></li>
-        <li class="footer-res-item"><a href="#">社員ブログ</a></li>
-        <li class="footer-res-item"><a href="#">会社概要</a></li>
-        <li class="footer-res-item"><a href="#">採用情報</a></li>
-        <li class="footer-res-item"><a href="#">お問い合わせ</a></li>
+        <li class="footer-res-item"><a href="service.html">事業内容</a></li>
+        <li class="footer-res-item"><a href="news.html">ニュース</a></li>
+        <li class="footer-res-item"><a href="blog.html">社員ブログ</a></li>
+        <li class="footer-res-item"><a href="company.html">会社概要</a></li>
+        <li class="footer-res-item"><a href="recruit.html">採用情報</a></li>
+        <li class="footer-res-item"><a href="contact.html">お問い合わせ</a></li>
       </ul>
     </div>
   </footer>
