--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
       
         <nav class="nav" id="nav">
           <ul>
-            <li><a href="home.html">ホーム</a></li>
+            <li><a href="index.html">ホーム</a></li>
             <li><a href="service.html">事業内容</a></li>
             <li><a href="news.html">ニュース</a></li>
             <li><a href="blog.html">社員ブログ</a></li>
@@ -112,6 +112,7 @@
   <div class="inq-ttl">お問い合わせ</div>
   <div class="inq-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</div>
   <a href="contact.html"><div class="section-link">お問い合わせ</div></a>
+</section>
 </section>
 </main>
 <footer>
